--- a/project/project2/lab2/zook.conf
+++ b/project/project2/lab2/zook.conf
@@ -2,42 +2,20 @@
     port       = 8080
     # To run multiple services, list them separated by commas, like:
     #  http_svcs = first_svc, second_svc
-    http_svcs  = zookfs_static_svc, zookfs_dynamic_svc
+    http_svcs  = zookfs_svc
     extra_svcs = echo_svc
 
 [zookd]
     cmd = zookd
-    uid = 61013
-    gid = 61013
+    uid = 0
+    gid = 0
     dir = /jail
 
-#[zookfs_svc]
-    #cmd = zookfs
-    #url = .*
-    #uid = 61011
-    #gid = 61011
-    #dir = /jail
-    # You can control what executables zookfs will run as CGI scripts
-    # by specifying the UID/GID of allowed CGI executables, as follows;
-    # uncomment and replace 123 and 456 with your intended UID and GID:
-    #args = 123 456
-
-[zookfs_static_svc]
+[zookfs_svc]
     cmd = zookfs
     url = .*
-    uid = 61012
-    gid = 61012
-    dir = /jail
-    # You can control what executables zookfs will run as CGI scripts
-    # by specifying the UID/GID of allowed CGI executables, as follows;
-    # uncomment and replace 123 and 456 with your intended UID and GID:
-    #args = 123 456
-
-[zookfs_dynamic_svc]
-    cmd = zookfs
-    url = .*
-    uid = 61011
-    gid = 61011
+    uid = 0
+    gid = 0
     dir = /jail
     # You can control what executables zookfs will run as CGI scripts
     # by specifying the UID/GID of allowed CGI executables, as follows;
