--- a/project/project2/lab2/zook.conf
+++ b/project/project2/lab2/zook.conf
@@ -3,7 +3,7 @@
     # To run multiple services, list them separated by commas, like:
     #  http_svcs = first_svc, second_svc
     http_svcs  = static_svc, dynamic_svc
-    extra_svcs = echo_svc
+    extra_svcs = echo_svc, auth_svc, bank_svc, profile_svc
 
 [zookd]
     cmd = zookd
@@ -30,7 +30,7 @@
     uid = 61011
     gid = 61011
     dir = /jail
-    args = 61014 61014
+    args = 61024 61024
 
 [echo_svc]
     cmd = /zoobar/echo-server.py
@@ -40,3 +40,26 @@
     gid = 61010
     # You can set supplementary groups with the extra_gids key.
     # extra_gids = 61011, 61012, 61013
+
+[auth_svc]
+    cmd = /zoobar/auth-server.py
+    args = /authsvc/sock
+    dir = /jail
+    uid = 61014
+    gid = 61011
+    # You can set supplementary groups with the extra_gids key.
+    # extra_gids = 61011, 61012, 61013
+
+[bank_svc]
+  cmd = /zoobar/bank-server.py
+  args = /banksvc/sock
+  dir = /jail
+  uid = 61015
+  gid = 61011
+
+[profile_svc]
+  cmd = /zoobar/profile-server.py
+  args = /profilesvc/sock
+  dir = /jail
+  uid = 0
+  gid = 0
